--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,9 @@ description = ""
 authors = ["JaunvanHeerden <jaun.vanheerden@allianceautomation.com.au>"]
 
 [tool.poetry.dependencies]
-python = "^3.8.0"
-numpy = "^1.22.0"
+python = ">=3.8.0,<3.11"
+numpy = "<1.22.0"
+numba = "^0.55.0"
 
 [tool.poetry.dev-dependencies]
 
