--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ python = ">=3.8.0,<3.11"
 numpy = "<1.22.0"
 numba = "^0.55.0"
 pytest = "^6.2.5"
+chart-studio = "^1.1.0"
+pyqtgraph = "^0.12.3"
+PyQt6 = "^6.2.2"
+PyQt5 = "^5.15.6"
 
 [tool.poetry.dev-dependencies]
 
