--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ chart-studio = "^1.1.0"
 pyqtgraph = "^0.12.3"
 PyQt6 = "^6.2.2"
 PyQt5 = "^5.15.6"
+tqdm = "^4.62.3"
 
 [tool.poetry.dev-dependencies]
 
