--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pyqtgraph = "^0.12.3"
 PyQt6 = "^6.2.2"
 PyQt5 = "^5.15.6"
 tqdm = "^4.62.3"
+pypiwin32 = "^223"
 
 [tool.poetry.dev-dependencies]
 
